# solution-labeling

./: .gitignore  README.md  config.json  config.yaml  local.env  pyproject.toml  requirements.txt
src/: config.yaml  main.py  state.py
