[project]
name = "solution-labeling"
version = "0.1.0"
description = "Solution for labeling tasks in Supervisely"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler==3.11.0",
    "black==25.1.0",
    "mypy==1.11.0",
    "mypy-extensions==1.0.0",
    "supervisely",
]

[tool.uv.sources]
